// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`category snapshot renders with default props 1`] = `
<WithStyles(Card)
  className="className"
>
  <span>
    <WithStyles(InputHeader)
      disabled={false}
      label="Category title"
      onChange={[Function]}
      onDelete={[MockFunction]}
    />
  </span>
  <DropTarget(WithStyles(DroppablePlaceHolder))
    category={
      Object {
        "id": "1",
        "label": "Category title",
      }
    }
    categoryId="1"
    onDeleteChoice={[MockFunction]}
    onDropChoice={[MockFunction]}
  />
  <WithStyles(CardActions)>
    <WithStyles(Component)
      label="delete"
      onClick={[MockFunction]}
    />
  </WithStyles(CardActions)>
</WithStyles(Card)>
`;

exports[`category snapshot renders without some components if no handlers are provided 1`] = `
<WithStyles(Card)
  className="className"
>
  <span>
    <WithStyles(InputHeader)
      disabled={false}
      label="Category title"
      onChange={[Function]}
    />
  </span>
  <DropTarget(WithStyles(DroppablePlaceHolder))
    category={
      Object {
        "id": "1",
        "label": "Category title",
      }
    }
    categoryId="1"
    onDeleteChoice={[MockFunction]}
    onDropChoice={[MockFunction]}
  />
</WithStyles(Card)>
`;
